samples/_failures_safe/1761405177_5d1dbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f22e57da.c: In function ‘main’:
./samples/SAFE/__tmp_f22e57da.c:174:9: error: expected expression at end of input
  174 |         if (sm.current_state ==
      |         ^~
./samples/SAFE/__tmp_f22e57da.c:174:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f22e57da.c:174:9: error: expected declaration or statement at end of input
